[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdflu"
version = "0.0.1"
dependencies = [
    "click >= 8.1.7, < 8.2",
    "bibtexparser >= 2.0.0b7, < 2.1",
    "arxiv >= 2.1.0, < 2.2",
    "habanero >= 1.2.6, < 1.3",
    "pdfminer.six >= 20231228",
]
requires-python = ">=3.10, <3.13"
authors = [
  {name="Steven Dahdah", email="sdahdah@users.noreply.github.com"},
]
description = "Command line tool to find BibTeX for academic papers using Crossref and arXiv."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/sdahdah/pdflu"
Issues = "https://github.com/sdahdah/pdflu/issues"

[project.scripts]
pdflu = "pdflu.pdflu:cli"
